syntax = "proto3";

// import "api/proto/base/result.proto";
import "api/vipex.cc/public/v1/v1.proto/apiResult.proto";

option go_package = "gitee.com/vipex/go-grpc/api/vipex.cc/aliOss/v1/v1.proto;v1_proto";

package v1.proto;

message OssPutReq {
  bytes reqFile = 1;
  string objectKey = 2;
  string bucketName = 3;
}

message OssGetReq {
  string bucketName = 1;
}

message OssPutRst {
  Result result = 1;
  bool data = 2;
  ErrorDes errorDes = 3;
}

message OssResult {
  Result result = 1;
  repeated string url = 2;
  ErrorDes errorDes = 3;
}

service OssGrpc {
  rpc Put (OssPutReq) returns (OssPutRst) {}
  rpc Get (OssGetReq) returns (OssResult) {}
}

message Oss {
  string url = 1;
}
